temp_error.log
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 2
    from pathlib 
                 ^
SyntaxError: invalid syntax
